# NDKLearnDemo

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/main/cpp/one/: CMakeLists.txt
app/src/main/cpp/three/: CMakeLists.txt  Hoho.cpp  com_vv_ndk_Hoho.h  feet.cpp  feet.h
app/src/main/cpp/two/: CMakeLists.txt  Hey.cpp  com_vv_ndk_Hey.h  fruit.cpp  fruit.h  two.cpp
app/src/main/java/com/vv/ndk/: Hello.java  Hey.java  Hoho.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
distribution/one/code/: CMakeLists.txt  Hello.cpp  apple.cpp  apple.h
gradle/wrapper/: gradle-wrapper.properties
